
  From Anatoly:

  - Add the scons.org URL and a package description to the setup.py
    arguments.

  - Have the Windows installer add a registry entry for scons.bat in the
    "App Paths" key, so scons.bat can be executed without adding the
    directory to the %PATH%.  (Python itself works this way.)

  From Anonymous:

  - Fix looking for default paths in Visual Studio 8.0 (and later).

  From Matt Doar:

  - Provide a more complete write-your-own-Scanner example in the man page.

  From Ralf W. Grosse-Kunstleve:

  - Contributed upstream Python change to our copied subprocess.py module
    for more efficient standard input processing.

  From Steven Knight:

  - Fix the Node.FS.Base.rel_path() method when the two nodes are on
    different drive letters.  (This caused an infinite loop when
    trying to write .sconsign files.)

  - Fully support Scanners that use a dictionary to map file suffixes
    to other scanners.

  - Support delayed evaluation of the $SPAWN variable to allow selection
    of a function via ${} string expansions.

  - Add --srcdir as a synonym for -Y/--repository.

  - Document limitations of #include "file.h" with Repository().

  - Fix use of a toolpath under the source directory of a BuildDir().

  - Fix env.Install() with a file name portion that begins with '#'.

  From Leanid Nazdrynau:

  - Fix detection of Java anonymous classes if a newline precedes the
    opening brace.

  From Gary Oberbrunner:

  - Document use of ${} to execute arbitrary Python code.

  - Add support for:
    1) automatically adding a site_scons subdirectory (in the top-level
       SConstruct directory) to sys.path (PYTHONPATH);
    2) automatically importing site_scons/site_init.py;
    3) automatically adding site_scons/site_tools to the toolpath.

  From John Pye:

  - Change ParseConfig() to preserve white space in arguments passed in
    as a list.

  From a smith:

  - Handle adding explicitly-named Java inner class files (and any